[gd_scene load_steps=2 format=3 uid="uid://cq8vx7m5hdj2p"]

[ext_resource type="Script" path="res://scripts/popups/PayoutPopup.gd" id="1_payout"]

[node name="PayoutPopup" type="PopupPanel"]
visible = true
transient = true
always_on_top = false
script = ExtResource("1_payout")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0
z_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HeaderHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="ResultLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
text = "–ë–ê–ù–ö–ò–†"

[node name="Spacer1" type="Control" parent="MarginContainer/VBoxContainer/HeaderHBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="StakeLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
text = "–°—Ç–∞–≤–∫–∞: 2000"

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="CenterHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ChipStacksContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 360)
layout_mode = 2
size_flags_horizontal = 3
alignment = 0

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer/CenterHBox"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="RightSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterHBox"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="PayoutButton" type="Button" parent="MarginContainer/VBoxContainer/CenterHBox/RightSection"]
layout_mode = 2
text = "–í—ã–ø–ª–∞—Ç–∞:"

[node name="HintButton" type="Button" parent="MarginContainer/VBoxContainer/CenterHBox/RightSection"]
layout_mode = 2
text = "üí° –ü–æ–¥—Å–∫–∞–∑–∫–∞"
theme_override_font_sizes/font_size = 20
custom_minimum_size = Vector2(200, 50)

[node name="Spacer4" type="Control" parent="MarginContainer/VBoxContainer/CenterHBox/RightSection"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="CollectedAmount" type="Label" parent="MarginContainer/VBoxContainer/CenterHBox/RightSection"]
layout_mode = 2
text = "1900"
horizontal_alignment = 1

[node name="Spacer5" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ChipFleetLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "–§–ª–æ—Ç —Ñ–∏—à–µ–∫:"
horizontal_alignment = 1

[node name="ChipFleetContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="Spacer6" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="FeedbackContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
z_index = 100
mouse_filter = 2

[node name="FeedbackLabel" type="Label" parent="FeedbackContainer"]
unique_name_in_owner = true
text = ""
horizontal_alignment = 1
vertical_alignment = 1
