# res://scripts/popups/PayoutPopup.gd
# ĞŸĞ¾Ğ¿Ğ°Ğ¿ Ğ´Ğ»Ñ Ñ€Ğ°ÑÑ‡Ñ‘Ñ‚Ğ° Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ñ‹ Ñ Ğ¸ÑĞ¿Ğ¾Ğ»ÑŒĞ·Ğ¾Ğ²Ğ°Ğ½Ğ¸ĞµĞ¼ Ñ„Ğ¸ÑˆĞµĞº
# Ğ˜ÑĞ¿Ğ¾Ğ»ÑŒĞ·ÑƒĞµÑ‚ Ğ¼Ğ¾Ğ´ÑƒĞ»ÑŒĞ½ÑƒÑ Ğ°Ñ€Ñ…Ğ¸Ñ‚ĞµĞºÑ‚ÑƒÑ€Ñƒ: ChipStack, ChipStackManager, PayoutValidator

extends PopupPanel

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# UI Ğ­Ğ›Ğ•ĞœĞ•ĞĞ¢Ğ«
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

@onready var result_label = $MarginContainer/VBoxContainer/HeaderHBox/ResultLabel
@onready var stake_label = $MarginContainer/VBoxContainer/HeaderHBox/StakeLabel
@onready var collected_amount_label = $MarginContainer/VBoxContainer/CenterHBox/RightSection/CollectedAmount
@onready var chip_stacks_container = %ChipStacksContainer
@onready var chip_fleet_label = $MarginContainer/VBoxContainer/ChipFleetLabel
@onready var chip_fleet_container = %ChipFleetContainer
@onready var feedback_label = %FeedbackLabel  # â† Ğ¢ĞµĞ¿ĞµÑ€ÑŒ Ğ² FeedbackContainer
@onready var feedback_container = $FeedbackContainer  # â† ĞšĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€ Ğ´Ğ»Ñ ÑƒĞ¿Ñ€Ğ°Ğ²Ğ»ĞµĞ½Ğ¸Ñ Ğ²Ğ¸Ğ´Ğ¸Ğ¼Ğ¾ÑÑ‚ÑŒÑ
@onready var payout_button = $MarginContainer/VBoxContainer/CenterHBox/RightSection/PayoutButton
@onready var hint_button = $MarginContainer/VBoxContainer/CenterHBox/RightSection/HintButton

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ğ¡Ğ˜Ğ“ĞĞĞ›Ğ«
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

signal payout_confirmed(is_correct: bool, collected: float, expected: float)
signal hint_used()

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞœĞĞ”Ğ£Ğ›Ğ˜
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

var stack_manager: ChipStackManager  # Ğ£Ğ¿Ñ€Ğ°Ğ²Ğ»ĞµĞ½Ğ¸Ğµ ÑÑ‚Ğ¾Ğ¿ĞºĞ°Ğ¼Ğ¸ Ñ„Ğ¸ÑˆĞµĞº
var validator: PayoutValidator       # Ğ’Ğ°Ğ»Ğ¸Ğ´Ğ°Ñ†Ğ¸Ñ Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ñ‹

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞŸĞ•Ğ Ğ•ĞœĞ•ĞĞĞ«Ğ•
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

var chip_denominations: Array = []  # ĞĞ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ñ‹ Ñ„Ğ¸ÑˆĞµĞº (Ğ¸Ğ· GameModeManager)
var current_stake: float = 0.0      # Ğ¢ĞµĞºÑƒÑ‰Ğ°Ñ ÑÑ‚Ğ°Ğ²ĞºĞ°
var current_winner: String = ""     # "Player", "Banker", "Tie"
var expected_payout: float = 0.0    # ĞĞ¶Ğ¸Ğ´Ğ°ĞµĞ¼Ğ°Ñ Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ°
var is_button_blocked: bool = false # Ğ‘Ğ»Ğ¾ĞºĞ¸Ñ€Ğ¾Ğ²ĞºĞ° ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ Ğ¿Ñ€Ğ¸ Ğ¾ÑˆĞ¸Ğ±ĞºĞµ

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# Ğ˜ĞĞ˜Ğ¦Ğ˜ĞĞ›Ğ˜Ğ—ĞĞ¦Ğ˜Ğ¯
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

func _ready():
	# Ğ¡Ğ¾Ğ·Ğ´Ğ°Ñ‘Ğ¼ Ğ¼Ğ¾Ğ´ÑƒĞ»Ğ¸
	stack_manager = ChipStackManager.new(chip_stacks_container)
	validator = PayoutValidator.new()

	# ĞŸĞ¾Ğ´Ğ¿Ğ¸ÑÑ‹Ğ²Ğ°ĞµĞ¼ÑÑ Ğ½Ğ° ÑĞ¾Ğ±Ñ‹Ñ‚Ğ¸Ñ
	stack_manager.total_changed.connect(_on_total_changed)
	stack_manager.stack_added.connect(_on_stack_added)
	GameModeManager.mode_changed.connect(_on_mode_changed)

	# ĞŸĞ¾Ğ»ÑƒÑ‡Ğ°ĞµĞ¼ Ğ½Ğ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ñ‹ Ñ„Ğ¸ÑˆĞµĞº
	_update_chip_denominations()

	# ĞĞ°ÑÑ‚Ñ€Ğ¾Ğ¹ĞºĞ° Ğ¾ĞºĞ½Ğ°
	_setup_window()
	_setup_styles()

	# Ğ¡ĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ Ñ„Ğ»Ğ¾Ñ‚ Ñ„Ğ¸ÑˆĞµĞº label
	chip_fleet_label.visible = false

	# Ğ¡ĞºÑ€Ñ‹Ğ²Ğ°ĞµĞ¼ ĞºĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€ Ğ¾Ğ±Ñ€Ğ°Ñ‚Ğ½Ğ¾Ğ¹ ÑĞ²ÑĞ·Ğ¸ Ğ¿Ğ¾ ÑƒĞ¼Ğ¾Ğ»Ñ‡Ğ°Ğ½Ğ¸Ñ
	feedback_container.visible = false

	# Ğ¡Ğ¾Ğ·Ğ´Ğ°Ñ‘Ğ¼ ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ Ğ½Ğ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ğ¾Ğ²
	_create_chip_buttons()

	# ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ñ‹ ĞºĞ½Ğ¾Ğ¿Ğ¾Ğº
	payout_button.pressed.connect(_on_payout_pressed)
	hint_button.pressed.connect(_on_hint_pressed)

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞŸĞ£Ğ‘Ğ›Ğ˜Ğ§ĞĞ«Ğ• ĞœĞ•Ğ¢ĞĞ”Ğ«
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

# â† ĞŸĞ¾ĞºĞ°Ğ·Ğ°Ñ‚ÑŒ Ğ¿Ğ¾Ğ¿Ğ°Ğ¿ Ñ Ñ€ĞµĞ·ÑƒĞ»ÑŒÑ‚Ğ°Ñ‚Ğ¾Ğ¼ Ñ€Ğ°ÑƒĞ½Ğ´Ğ°
func show_payout(winner: String, stake: float, payout: float):
	current_winner = winner
	current_stake = stake
	expected_payout = payout

	# ĞÑ‡Ğ¸Ñ‰Ğ°ĞµĞ¼ Ğ²ÑĞµ ÑÑ‚Ğ¾Ğ¿ĞºĞ¸
	stack_manager.clear_all()

	# Ğ£ÑÑ‚Ğ°Ğ½Ğ°Ğ²Ğ»Ğ¸Ğ²Ğ°ĞµĞ¼ Ğ·Ğ°Ğ³Ğ¾Ğ»Ğ¾Ğ²Ğ¾Ğº Ğ¸ Ñ†Ğ²ĞµÑ‚
	_set_result_header(winner)

	# Ğ¡Ñ‚Ğ°Ğ²ĞºĞ° Ñ€ÑĞ´Ğ¾Ğ¼ Ñ Ğ·Ğ°Ğ³Ğ¾Ğ»Ğ¾Ğ²ĞºĞ¾Ğ¼
	stake_label.text = Localization.t("PAYOUT_STAKE", [_format_amount(stake)])

	# ĞšĞ½Ğ¾Ğ¿ĞºĞ° "Ğ’Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ°:"
	payout_button.text = "Ğ’Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ°:"

	# Ğ§Ğ¸ÑĞ»Ğ¾ ÑĞ¿Ñ€Ğ°Ğ²Ğ° Ğ²Ğ½Ğ¸Ğ·Ñƒ (Ğ½Ğ°Ñ‡Ğ¸Ğ½Ğ°ĞµĞ¼ Ñ 0)
	collected_amount_label.text = "0"

	# ĞŸĞ¾ĞºĞ°Ğ·Ñ‹Ğ²Ğ°ĞµĞ¼ Ğ¿Ğ¾Ğ¿Ğ°Ğ¿ Ñ Ğ¾Ñ‚ÑÑ‚ÑƒĞ¿Ğ¾Ğ¼ ÑĞ²ĞµÑ€Ñ…Ñƒ, Ñ‡Ñ‚Ğ¾Ğ±Ñ‹ Ğ½Ğµ Ğ¿ĞµÑ€ĞµĞºÑ€Ñ‹Ğ²Ğ°Ñ‚ÑŒ Ğ¡ĞµÑ€Ğ´ĞµÑ‡ĞºĞ¸
	popup_centered()
	var screen_size = DisplayServer.screen_get_size()
	position.y = 80  # â† ĞÑ‚ÑÑ‚ÑƒĞ¿ ÑĞ²ĞµÑ€Ñ…Ñƒ Ğ´Ğ»Ñ Ğ¡ĞµÑ€Ğ´ĞµÑ‡ĞµĞº (Ğ¾Ğ½Ğ¸ Ğ½Ğ° Ğ²Ñ‹ÑĞ¾Ñ‚Ğµ 10-60px)

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞĞ‘Ğ ĞĞ‘ĞĞ¢Ğ§Ğ˜ĞšĞ˜ Ğ¡ĞĞ‘Ğ«Ğ¢Ğ˜Ğ™
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ° ĞºĞ»Ğ¸ĞºĞ° Ğ½Ğ° Ğ½Ğ¾Ğ¼Ğ¸Ğ½Ğ°Ğ» Ñ„Ğ¸ÑˆĞºĞ¸ (Ğ´Ğ¾Ğ±Ğ°Ğ²Ğ»ĞµĞ½Ğ¸Ğµ)
func _on_chip_clicked(denomination: float):
	stack_manager.add_chip(denomination)

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ° Ğ¿Ñ€Ğ°Ğ²Ğ¾Ğ³Ğ¾ ĞºĞ»Ğ¸ĞºĞ° Ğ¿Ğ¾ ĞºĞ½Ğ¾Ğ¿ĞºĞµ Ñ„Ğ¸ÑˆĞºĞ¸ (ÑƒĞ´Ğ°Ğ»ĞµĞ½Ğ¸Ğµ)
func _on_chip_button_input(event: InputEvent, denomination: float):
	if event is InputEventMouseButton and event.pressed and event.button_index == MOUSE_BUTTON_RIGHT:
		stack_manager.remove_chip(denomination)

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚Ñ‡Ğ¸Ğº Ğ´Ğ¾Ğ±Ğ°Ğ²Ğ»ĞµĞ½Ğ¸Ñ Ğ½Ğ¾Ğ²Ğ¾Ğ¹ ÑÑ‚Ğ¾Ğ¿ĞºĞ¸ (Ğ¿Ğ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ Ğ¾Ğ±Ñ€Ğ°Ğ±Ğ¾Ñ‚Ñ‡Ğ¸Ğº ĞºĞ»Ğ¸ĞºĞ¾Ğ²)
func _on_stack_added(stack: ChipStack, _index: int):
	# ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ Ğ¾Ğ±Ñ€Ğ°Ğ±Ğ¾Ñ‚Ñ‡Ğ¸Ğº ĞºĞ»Ğ¸ĞºĞ¾Ğ² Ğº ĞºĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€Ñƒ ÑÑ‚Ğ¾Ğ¿ĞºĞ¸
	stack.container.gui_input.connect(_on_stack_clicked.bind(stack))

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ° ĞºĞ»Ğ¸ĞºĞ° Ğ½Ğ° ÑÑ‚Ğ¾Ğ¿ĞºÑƒ (ÑƒĞ´Ğ°Ğ»ĞµĞ½Ğ¸Ğµ Ğ¸Ğ· Ğ¿Ğ¾ÑĞ»ĞµĞ´Ğ½ĞµĞ³Ğ¾ ÑÑ‚ĞµĞºĞ°)
func _on_stack_clicked(event: InputEvent, stack: ChipStack):
	if event is InputEventMouseButton and event.pressed and event.button_index == MOUSE_BUTTON_LEFT:
		stack_manager.remove_chip(stack.denomination)

# â† ĞĞ±Ğ½Ğ¾Ğ²Ğ»ĞµĞ½Ğ¸Ğµ ÑÑƒĞ¼Ğ¼Ñ‹ Ğ¿Ñ€Ğ¸ Ğ¸Ğ·Ğ¼ĞµĞ½ĞµĞ½Ğ¸Ğ¸ ÑÑ‚Ğ¾Ğ¿Ğ¾Ğº
func _on_total_changed(new_total: float):
	collected_amount_label.text = _format_amount(new_total)

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ° Ğ½Ğ°Ğ¶Ğ°Ñ‚Ğ¸Ñ ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ "Ğ’Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ°:"
func _on_payout_pressed():
	if is_button_blocked:
		return

	var collected_total = stack_manager.get_total()
	var is_correct = validator.validate(collected_total, expected_payout)

	if is_correct:
		_show_success_animation()
	else:
		_show_error_animation(collected_total)

	payout_confirmed.emit(is_correct, collected_total, expected_payout)

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚ĞºĞ° ĞºĞ½Ğ¾Ğ¿ĞºĞ¸ Ğ¿Ğ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ¸
func _on_hint_pressed():
	# ĞÑ‡Ğ¸Ñ‰Ğ°ĞµĞ¼ Ñ‚ĞµĞºÑƒÑ‰Ğ¸Ğµ ÑÑ‚Ğ¾Ğ¿ĞºĞ¸
	stack_manager.clear_all()

	# Ğ Ğ°ÑÑÑ‡Ğ¸Ñ‚Ñ‹Ğ²Ğ°ĞµĞ¼ Ğ¾Ğ¿Ñ‚Ğ¸Ğ¼Ğ°Ğ»ÑŒĞ½Ğ¾Ğµ Ñ€Ğ°ÑĞ¿Ñ€ĞµĞ´ĞµĞ»ĞµĞ½Ğ¸Ğµ Ñ„Ğ¸ÑˆĞµĞº
	var hint = validator.calculate_hint(expected_payout, chip_denominations)

	# Ğ”Ğ¾Ğ±Ğ°Ğ²Ğ»ÑĞµĞ¼ Ñ„Ğ¸ÑˆĞºĞ¸ ÑĞ¾Ğ³Ğ»Ğ°ÑĞ½Ğ¾ Ğ¿Ğ¾Ğ´ÑĞºĞ°Ğ·ĞºĞµ
	for item in hint:
		var denomination = item["denomination"]
		var count = item["count"]

		for i in range(count):
			stack_manager.add_chip(denomination)

	# ĞÑ‚Ğ¿Ñ€Ğ°Ğ²Ğ»ÑĞµĞ¼ ÑĞ¸Ğ³Ğ½Ğ°Ğ»
	hint_used.emit()
	print("ğŸ’¡ ĞŸĞ¾Ğ´ÑĞºĞ°Ğ·ĞºĞ° Ğ¸ÑĞ¿Ğ¾Ğ»ÑŒĞ·Ğ¾Ğ²Ğ°Ğ½Ğ°! ĞĞ¶Ğ¸Ğ´Ğ°ĞµĞ¼Ğ°Ñ Ğ²Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ°: %s" % expected_payout)

# â† ĞĞ±Ñ€Ğ°Ğ±Ğ¾Ñ‚Ñ‡Ğ¸Ğº Ğ¸Ğ·Ğ¼ĞµĞ½ĞµĞ½Ğ¸Ñ Ñ€ĞµĞ¶Ğ¸Ğ¼Ğ° Ğ¸Ğ³Ñ€Ñ‹
func _on_mode_changed(_mode: String):
	_update_chip_denominations()
	_create_chip_buttons()
	stack_manager.clear_all()
	collected_amount_label.text = "0"

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞŸĞ Ğ˜Ğ’ĞĞ¢ĞĞ«Ğ• ĞœĞ•Ğ¢ĞĞ”Ğ« - ĞĞĞ¡Ğ¢Ğ ĞĞ™ĞšĞ UI
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

func _setup_window():
	var screen_size = DisplayServer.screen_get_size()
	min_size = GameConstants.PAYOUT_POPUP_MIN_SIZE
	size = Vector2(
		min(GameConstants.PAYOUT_POPUP_MAX_WIDTH, screen_size.x * GameConstants.PAYOUT_POPUP_WIDTH_MULT),
		min(GameConstants.PAYOUT_POPUP_MAX_HEIGHT, screen_size.y * GameConstants.PAYOUT_POPUP_HEIGHT_MULT)
	)

func _setup_styles():
	# Ğ¤Ğ¸Ğ¾Ğ»ĞµÑ‚Ğ¾Ğ²Ñ‹Ğ¹ Ñ„Ğ¾Ğ½ Ğ² ÑÑ‚Ğ¸Ğ»Ğµ Ğ²ĞµĞ»ÑÑ€Ğ¾Ğ²Ğ¾Ğ³Ğ¾ ÑÑ‚Ğ¾Ğ»Ğ° Ğ±Ğ°ĞºĞºĞ°Ñ€Ğ°
	var stylebox = StyleBoxFlat.new()
	stylebox.bg_color = Color(0.45, 0.25, 0.55, 0.97)  # â† Ğ’ĞµÑ€Ğ½ÑƒĞ»Ğ¸ Ğ½ĞµĞ¿Ñ€Ğ¾Ğ·Ñ€Ğ°Ñ‡Ğ½Ğ¾ÑÑ‚ÑŒ
	stylebox.border_width_left = 3
	stylebox.border_width_top = 3
	stylebox.border_width_right = 3
	stylebox.border_width_bottom = 3
	stylebox.border_color = Color(0.7, 0.5, 0.2)  # â† Ğ Ğ°Ğ¼ĞºĞ° Ğ½ĞµĞ¿Ñ€Ğ¾Ğ·Ñ€Ğ°Ñ‡Ğ½Ğ°Ñ
	stylebox.corner_radius_top_left = 8
	stylebox.corner_radius_top_right = 8
	stylebox.corner_radius_bottom_left = 8
	stylebox.corner_radius_bottom_right = 8
	add_theme_stylebox_override("panel", stylebox)

	# ĞÑ‚ÑÑ‚ÑƒĞ¿Ñ‹
	$MarginContainer.add_theme_constant_override("margin_left", GameConstants.PAYOUT_POPUP_MARGIN)
	$MarginContainer.add_theme_constant_override("margin_right", GameConstants.PAYOUT_POPUP_MARGIN)
	$MarginContainer.add_theme_constant_override("margin_top", GameConstants.PAYOUT_POPUP_MARGIN_TOP)
	$MarginContainer.add_theme_constant_override("margin_bottom", GameConstants.PAYOUT_POPUP_MARGIN_BOTTOM)

	# Ğ—Ğ°Ğ³Ğ¾Ğ»Ğ¾Ğ²Ğ¾Ğº
	result_label.add_theme_font_size_override("font_size", GameConstants.FONT_SIZE_RESULT_LABEL)
	result_label.add_theme_color_override("font_color", Color(0.8, 0.15, 0.15))
	result_label.add_theme_color_override("font_outline_color", Color(0, 0, 0, 0.9))
	result_label.add_theme_constant_override("outline_size", 3)

	# Ğ¡Ñ‚Ğ°Ğ²ĞºĞ°
	stake_label.add_theme_font_size_override("font_size", GameConstants.FONT_SIZE_STAKE_LABEL)
	stake_label.add_theme_color_override("font_color", Color(0.4, 0.7, 0.5))

	# Ğ§Ğ¸ÑĞ»Ğ¾ ÑĞ¿Ñ€Ğ°Ğ²Ğ°
	collected_amount_label.add_theme_font_size_override("font_size", GameConstants.FONT_SIZE_COLLECTED_AMOUNT)
	collected_amount_label.add_theme_color_override("font_color", Color(0.85, 0.85, 0.85, 0.7))

	# Ğ Ğ°Ğ·Ğ¼ĞµÑ€Ñ‹ ĞºĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€Ğ¾Ğ²
	chip_stacks_container.custom_minimum_size = Vector2(0, GameConstants.CHIP_STACKS_CONTAINER_HEIGHT)
	chip_stacks_container.size_flags_horizontal = Control.SIZE_EXPAND_FILL

	var right_section = $MarginContainer/VBoxContainer/CenterHBox/RightSection
	right_section.custom_minimum_size = Vector2(GameConstants.RIGHT_SECTION_WIDTH, 0)
	right_section.size_flags_horizontal = Control.SIZE_SHRINK_END

	# ĞšĞ½Ğ¾Ğ¿ĞºĞ° "Ğ’Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ°:"
	payout_button.text = "Ğ’Ñ‹Ğ¿Ğ»Ğ°Ñ‚Ğ°:"
	payout_button.add_theme_font_size_override("font_size", GameConstants.FONT_SIZE_PAYOUT_BUTTON)
	payout_button.custom_minimum_size = GameConstants.PAYOUT_BUTTON_SIZE

	var button_style_normal = StyleBoxFlat.new()
	button_style_normal.bg_color = Color(0.15, 0.45, 0.4)
	button_style_normal.border_width_left = 3
	button_style_normal.border_width_top = 3
	button_style_normal.border_width_right = 3
	button_style_normal.border_width_bottom = 3
	button_style_normal.border_color = Color(0, 0, 0)
	button_style_normal.corner_radius_top_left = 8
	button_style_normal.corner_radius_top_right = 8
	button_style_normal.corner_radius_bottom_left = 8
	button_style_normal.corner_radius_bottom_right = 8
	payout_button.add_theme_stylebox_override("normal", button_style_normal)

	var button_style_hover = StyleBoxFlat.new()
	button_style_hover.bg_color = Color(0.2, 0.55, 0.5)
	button_style_hover.border_width_left = 3
	button_style_hover.border_width_top = 3
	button_style_hover.border_width_right = 3
	button_style_hover.border_width_bottom = 3
	button_style_hover.border_color = Color(0.1, 0.1, 0.1)
	button_style_hover.corner_radius_top_left = 8
	button_style_hover.corner_radius_top_right = 8
	button_style_hover.corner_radius_bottom_left = 8
	button_style_hover.corner_radius_bottom_right = 8
	payout_button.add_theme_stylebox_override("hover", button_style_hover)

	payout_button.add_theme_color_override("font_color", Color(1, 1, 1))

# â† Ğ¡Ğ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ğµ ĞºĞ½Ğ¾Ğ¿Ğ¾Ğº Ğ´Ğ»Ñ ĞºĞ°Ğ¶Ğ´Ğ¾Ğ³Ğ¾ Ğ½Ğ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ğ° Ñ„Ğ¸ÑˆĞºĞ¸
func _create_chip_buttons():
	# ĞÑ‡Ğ¸Ñ‰Ğ°ĞµĞ¼ ĞºĞ¾Ğ½Ñ‚ĞµĞ¹Ğ½ĞµÑ€
	for child in chip_fleet_container.get_children():
		child.queue_free()

	chip_fleet_container.add_theme_constant_override("separation", 10)

	for denomination in chip_denominations:
		var button = TextureButton.new()
		button.custom_minimum_size = GameConstants.CHIP_BUTTON_SIZE
		button.stretch_mode = TextureButton.STRETCH_KEEP_ASPECT_CENTERED

		# Ğ—Ğ°Ğ³Ñ€ÑƒĞ¶Ğ°ĞµĞ¼ Ñ‚ĞµĞºÑÑ‚ÑƒÑ€Ñƒ Ñ„Ğ¸ÑˆĞºĞ¸
		var denom_str = str(int(denomination)) if denomination >= 1 else str(denomination)
		var chip_path = GameConstants.CHIP_TEXTURE_PATH_TEMPLATE % denom_str
		var texture = load(chip_path)
		if texture:
			button.texture_normal = texture
		else:
			push_warning("PayoutPopup: Ñ‚ĞµĞºÑÑ‚ÑƒÑ€Ğ° Ğ½Ğµ Ğ½Ğ°Ğ¹Ğ´ĞµĞ½Ğ°: %s" % chip_path)

		# ĞŸĞ¾Ğ´ĞºĞ»ÑÑ‡Ğ°ĞµĞ¼ ÑĞ¸Ğ³Ğ½Ğ°Ğ»Ñ‹
		button.pressed.connect(_on_chip_clicked.bind(denomination))
		button.gui_input.connect(_on_chip_button_input.bind(denomination))

		chip_fleet_container.add_child(button)

# â† Ğ£ÑÑ‚Ğ°Ğ½Ğ¾Ğ²ĞºĞ° Ğ·Ğ°Ğ³Ğ¾Ğ»Ğ¾Ğ²ĞºĞ° Ñ Ñ†Ğ²ĞµÑ‚Ğ¾Ğ¼
func _set_result_header(winner: String):
	match winner:
		"Banker":
			result_label.text = Localization.t("WIN_BANKER")
			result_label.add_theme_color_override("font_color", Color(0.9, 0.2, 0.2))
		"Player":
			result_label.text = Localization.t("WIN_PLAYER")
			result_label.add_theme_color_override("font_color", Color(0.2, 0.4, 0.9))
		"Tie":
			result_label.text = Localization.t("WIN_TIE")
			result_label.add_theme_color_override("font_color", Color(0.9, 0.7, 0.2))

# â† ĞĞ±Ğ½Ğ¾Ğ²Ğ¸Ñ‚ÑŒ Ğ½Ğ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ñ‹ Ñ„Ğ¸ÑˆĞµĞº Ğ¸Ğ· GameModeManager
func _update_chip_denominations():
	chip_denominations = GameModeManager.get_chip_denominations()
	print("PayoutPopup: ĞĞ¾Ğ¼Ğ¸Ğ½Ğ°Ğ»Ñ‹ Ñ„Ğ¸ÑˆĞµĞº Ğ¾Ğ±Ğ½Ğ¾Ğ²Ğ»ĞµĞ½Ñ‹: ", chip_denominations)

# â† Ğ¤Ğ¾Ñ€Ğ¼Ğ°Ñ‚Ğ¸Ñ€Ğ¾Ğ²Ğ°Ğ½Ğ¸Ğµ Ñ‡Ğ¸ÑĞ»Ğ°
func _format_amount(amount: float) -> String:
	if amount == floor(amount):
		return str(int(amount))
	else:
		return str(amount)

# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•
# ĞĞĞ˜ĞœĞĞ¦Ğ˜Ğ˜
# â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•

func _show_success_animation():
	feedback_container.visible = true
	feedback_label.text = "Ğ’ĞµÑ€Ğ½Ğ¾!"
	feedback_label.add_theme_font_size_override("font_size", GameConstants.FONT_SIZE_RESULT_LABEL * 2)  # â† ĞšÑ€ÑƒĞ¿Ğ½ĞµĞµ
	feedback_label.add_theme_color_override("font_color", Color(0.2, 0.9, 0.2))
	feedback_label.add_theme_color_override("font_outline_color", Color(0, 0, 0, 0.9))
	feedback_label.add_theme_constant_override("outline_size", 5)

	await get_tree().create_timer(GameConstants.SUCCESS_ANIMATION_DURATION).timeout
	feedback_container.visible = false
	feedback_label.text = ""
	hide()

func _show_error_animation(collected: float):
	is_button_blocked = true
	payout_button.disabled = true

	feedback_container.visible = true
	var error_msg = validator.get_error_message(collected, expected_payout)
	feedback_label.text = "ĞÑˆĞ¸Ğ±ĞºĞ°!\n%s" % error_msg
	feedback_label.add_theme_font_size_override("font_size", GameConstants.FONT_SIZE_FEEDBACK_ERROR * 1.5)  # â† ĞšÑ€ÑƒĞ¿Ğ½ĞµĞµ
	feedback_label.add_theme_color_override("font_color", Color(0.9, 0.2, 0.2))
	feedback_label.add_theme_color_override("font_outline_color", Color(0, 0, 0, 0.9))
	feedback_label.add_theme_constant_override("outline_size", 5)

	# ĞĞ½Ğ¸Ğ¼Ğ°Ñ†Ğ¸Ñ Ñ‚Ñ€ÑÑĞºĞ¸ ĞºĞ½Ğ¾Ğ¿ĞºĞ¸
	var tween = create_tween()
	var original_pos = payout_button.position
	var shake = GameConstants.SHAKE_OFFSET
	var dur = GameConstants.SHAKE_DURATION
	tween.tween_property(payout_button, "position:x", original_pos.x + shake, dur)
	tween.tween_property(payout_button, "position:x", original_pos.x - shake, dur)
	tween.tween_property(payout_button, "position:x", original_pos.x + shake, dur)
	tween.tween_property(payout_button, "position:x", original_pos.x - shake, dur)
	tween.tween_property(payout_button, "position:x", original_pos.x, dur)

	await get_tree().create_timer(GameConstants.ERROR_ANIMATION_DURATION).timeout
	is_button_blocked = false
	payout_button.disabled = false
	feedback_container.visible = false
	feedback_label.text = ""

	# ĞĞ²Ñ‚Ğ¾Ğ¼Ğ°Ñ‚Ğ¸Ñ‡ĞµÑĞºĞ¸ Ğ¾Ñ‡Ğ¸Ñ‰Ğ°ĞµĞ¼ Ğ²ÑĞµ Ñ„Ğ¸ÑˆĞºĞ¸
	stack_manager.clear_all()
